# ore-verifier

./: .env.example  .gitignore  README.md  app.yaml  circle.yml  dispatch.yaml  index.js  jest.config.js  keys.js  newrelic.js  package-lock.json  package.json
plugin/: README.md
plugin/verifier_api_plugin/: CMakeLists.txt  verifier_api_plugin.cpp
plugin/verifier_api_plugin/include/eosio/verifier_api_plugin/: verifier_api_plugin.hpp
plugin/verifier_plugin/: CMakeLists.txt  verifier_plugin.cpp
plugin/verifier_plugin/include/eosio/verifier_plugin/: account_control_verifier_object.hpp  public_key_verifier_object.hpp  verifier_plugin.hpp
scripts/config/: prod.app.yaml  staging.app.yaml
src/: eos.js  helpers.js  instrument.js  logging.js  ore.js  rights.js  rollbar.js  token.js  verifier.js
test/: env.js  setup.js
test/helpers/: eos.js  fetch.js  ore.js
test/src/: instrument.test.js  rights.test.js  token.test.js  verifier.test.js
